user notification preferences

--- a/Areas/Patient/Views/Shared/_PatientLayout.cshtml
+++ b/Areas/Patient/Views/Shared/_PatientLayout.cshtml
@@ -96,21 +96,15 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="nav-link" data-url="@Url.Action("Index", "Notifications", new { area = "Patient" })">
-                    <i class="bi bi-bell"></i>
-                    <span>Notifications</span>
-                </a>
-            </li>
-            <li>
                 <a href="#" class="nav-link" data-url="@Url.Action("Index", "Treatments", new { area = "Patient" })">
                     <i class="bi bi-clipboard2-pulse"></i>
                     <span>Treatments & Reports</span>
                 </a>
             </li>
             <li>
-                <a href="#" class="nav-link" data-url="@Url.Action("Index", "TimeSlots", new { area = "Patient" })">
-                    <i class="bi bi-clock"></i>
-                    <span>Available Time Slots</span>
+                <a href="#" class="nav-link" data-url="@Url.Action("Index", "Notifications", new { area = "Patient" })">
+                    <i class="bi bi-bell"></i>
+                    <span>Notifications</span>
                 </a>
             </li>
             <li>
@@ -118,7 +112,7 @@
                    class="nav-link no-ajax" 
                    onclick="window.location.href=this.href; return false;">
                     <i class="bi bi-person"></i>
-                    <span>Profile & Settings</span>
+                    <span>Profile Settings</span>
                 </a>
             </li>
             <li>
